--- a/WireMock.Net.Tests/WireMock.Net.Tests.csproj
+++ b/WireMock.Net.Tests/WireMock.Net.Tests.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="RestSharp" Version="111.2.0" />
+    <PackageReference Include="SoapHttpClient" Version="3.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
